--- a/style/scss/_colors_fonts.scss
+++ b/style/scss/_colors_fonts.scss
@@ -5,16 +5,16 @@ $light: #f7f7ff;
 $rouge: #fe5f55;
 
 @font-face {
-  font-family: "Stars";
-  src: url(Stars.ttf) format("truetype");
+  font-family: Stars;
+  src: url("Stars.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: "AutoShel";
-  src: url(Authentic_Sheldon.ttf) format("truetype");
+  font-family: AutoShel;
+  src: url("Authentic_Sheldon.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: "Afterglow";
-  src: url(Afterglow_Regular.ttf) format("truetype");
+  font-family: Afterglow;
+  src: url("Afterglow_Regular.ttf") format("truetype");
 }
