--- a/style/scss/_reset_css.scss
+++ b/style/scss/_reset_css.scss
@@ -6,6 +6,6 @@ html {
     margin: 0;
     height: 250%;
     color: cf.$darker;
-    font-family: "Stars", cursive;
+    font-family: Stars, cursive;
   }
 }
