Ajout et Modifs pour le blog. La base est finie (sauf le style).

--- a/blog/include/_header.html
+++ b/blog/include/_header.html
@@ -4,5 +4,5 @@
 <meta charset="descriptions" content="" />
 <meta charset="keywords" content="" />
 <meta charset="author" content="Aline SIROT" />
-<link rel="stylesheet" type="text/css" href="style/css/index.css" />
+<link rel="stylesheet" type="text/css" href="../style/css/index.css" />
 <link rel="icon" href="" />
