--- a/blog/style/scss/_colors_fonts.scss
+++ b/blog/style/scss/_colors_fonts.scss
@@ -1,7 +1,10 @@
 $darker: #495867;
 $dark: #577399;
+$bleufonce: #87a1c0;
 $bleu: #bdd5ea;
 $light: #f7f7ff;
+$lightrose: #fbdadc;
+$rose: #f98d8b;
 $rouge: #fe5f55;
 
 @font-face {
